--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <img id="imagen" src="" alt="Esperando que la imagen se recargue">
     <button id="bt1" onclick="cambiarImagen1()">Imagen 1</button>
     <button id="bt2" onclick="cambiarImagen2()">Imagen 2</button>
-
+    <input type="text" id="myID">
+    <button onclick="console.log(document.getElementById('myID').value)">enviar</button>
     <!-- <script>
         console.log("hola a todos , este es mi primer hola mundo en Javascript")
     </script> -->
